--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,6 @@
 .PHONY: check all clean
-
+RED='\033[0;31m'
+NC='\033[0m' # No Color
 COQC=coqc
 
 TESTS=$(wildcard *.v)
@@ -10,7 +11,7 @@ all: check
 check: $(RESULTS)
 
 %.vo: %.v
-	@ ($(COQC) $< && echo "[OK] " $<) || echo "[KO] " $<
+	@ ($(COQC) $< && echo "[OK] " $<) || echo "\033[0;31m[KO]\033[0m " $<
 
 clean:
 	rm --force $(RESULTS) *.glob .*.aux
