Fwd exit status in tests/Makefile.
Use make -k to emulate previous behaviour.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -11,7 +11,7 @@ all: check
 check: $(RESULTS)
 
 %.vo: %.v
-	@ ($(COQC) -I ../src -Q ../theories Mtac2 $< && echo "[OK] " $<) || echo "\033[0;31m[KO]\033[0m " $<
+	@ ($(COQC) -I ../src -Q ../theories Mtac2 $< && echo "[OK] " $<) || ( EXITSTATE="$$?"; echo "\033[0;31m[KO]\033[0m" $<; exit "$$EXITSTATE" )
 
 clean:
 	rm --force $(RESULTS) *.glob .*.aux
