--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,11 @@ script:
 - ./configure.sh
 - make clean && make
 - cd tests && make clean && make -k
+
+notifications:
+  webhooks:
+    urls:
+        - https://webhooks.gitter.im/e/2fc197f36f7c587c0f59
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
