--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,8 @@ install:
 - eval $(opam config env)
 - opam config var root
 - travis_wait opam repo add coq-released https://coq.inria.fr/opam/released || echo
-- travis_wait opam pin -y add coq-unicoq git://github.com/unicoq/unicoq#v1.2-coq8.6
-- travis_wait opam update -y
-- travis_wait opam upgrade -y || travis_wait opam upgrade -y --fixup
-- travis_wait opam install -y coq.8.6.1 ocamlfind coq-unicoq
+- travis_wait opam pin -y add coq-unicoq git://github.com/unicoq/unicoq#v1.3-8.6
+- travis_wait opam install -y coq.8.6.1 ocamlfind
 - opam list
 script:
 - ./configure.sh
