--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 - opam config var root
 - travis_wait opam repo add coq-released https://coq.inria.fr/opam/released || echo
 - travis_wait opam install -y coq.8.6.1 ocamlfind
-- travis_wait opam pin -y add coq-unicoq git://github.com/unicoq/unicoq#v1.3-8.6
+- travis_wait opam install -y coq-unicoq
 - opam list
 script:
 - ./configure.sh
