Rework test infrastructure; add "/timings" folder.
Important: Use `make test` to run tests from now on. Use `make timings`
to get timings for `reif_jasson.v` and `mfix.v`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
 script:
 - ./configure.sh
 - make printenv
-- make clean && make && (cd tests && make clean && make -k)
+- make clean && make && (make -k test)
 
 notifications:
   webhooks:
