added dependency so tests and timings rebuild after changing theories

--- a/Makefile.local
+++ b/Makefile.local
@@ -13,12 +13,12 @@ TIMINGRESULTS=$(TIMINGS:.v=.vo)
 
 timing: $(TIMINGRESULTS)
 
-tests/%.vo: tests/%.v
+tests/%.vo: tests/%.v real-all
 	$(SHOW)COQC $<
 	$(HIDE)(($(TIMER) $(COQC) $(COQDEBUG) $(TIMING_ARG) $(COQFLAGS) $< $(TIMING_EXTRA) && echo "[OK] " $<) || ( EXITSTATE="$$?"; echo "\033[0;31m[KO]\033[0m" $<; exit "$$EXITSTATE" ))
 .PHONY=tes
 
-timings/%.vo: timings/%.v
+timings/%.vo: timings/%.v real-all
 	$(SHOW)COQC $<
 	$(HIDE)(($(TIMER) $(COQC) $(COQDEBUG) $(TIMING_ARG) $(COQFLAGS) $< $(TIMING_EXTRA) && echo "[OK] " $<) || ( EXITSTATE="$$?"; echo "\033[0;31m[KO]\033[0m" $<; exit "$$EXITSTATE" ))
 .PHONY=timing
