updating sf-5 to latest changes in Mtac2

--- a/Makefile.local
+++ b/Makefile.local
@@ -9,7 +9,10 @@ TESTRESULTS=$(TESTS:.v=.vo)
 EXAMPLES=$(wildcard examples/*.v)
 EXAMPLESRESULTS=$(EXAMPLES:.v=.vo)
 
-test: $(TESTRESULTS) $(EXAMPLESRESULTS)
+test: $(TESTRESULTS) $(EXAMPLESRESULTS) sf
+
+sf:
+	cd tests/sf-5; ./configure.sh; make
 
 TIMINGS=$(wildcard timings/*.v)
 TIMINGRESULTS=$(TIMINGS:.v=.vo)
