--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
 script:
 - ./configure.sh
 - make printenv
-- make clean && make && (make -k test)
+- make clean && make && make install && (make -k test)
 
 notifications:
   webhooks:
