--- a/Makefile.local
+++ b/Makefile.local
@@ -10,12 +10,14 @@ TESTRESULTS=$(TESTS:.v=.vo)
 EXAMPLES=$(wildcard examples/*.v)
 EXAMPLESRESULTS=$(EXAMPLES:.v=.vo)
 
-all: test
+post-all:: test
 
 test: $(TESTRESULTS) $(EXAMPLESRESULTS) sf
 
 sf:
 	cd tests/sf-5; ./configure.sh; make clean; make
+
+.PHONY=sf
 
 TIMINGS=$(wildcard timings/*.v)
 TIMINGRESULTS=$(TIMINGS:.v=.vo)
