--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 env:
   matrix:
-  - COQ_IMAGE="coqorg/coq:dev"
+  - COQ_IMAGE="ocaml/opam2:4.05"
 
 install: |
   # Run the COQ container and display build metadata
@@ -18,7 +18,15 @@ install: |
     opam config list
     opam repo list
     opam list
-    opam install -y coq-unicoq
+    opam repo add coq-released https://coq.inria.fr/opam/released
+    opam repo add coq-core-dev https://coq.inria.fr/opam/core-dev
+    opam repo list
+    sudo apt install -y m4
+    opam install -y coq.dev
+    coqc --version
+    opam pin --ignore-constraints-on=coq add coq-unicoq https://github.com/unicoq/unicoq.git#master
+    opam pin
+    opam list
     "
 script:
 - echo -e "${ANSI_YELLOW}Building Mtac2...${ANSI_RESET}" && echo -en 'travis_fold:start:Mtac2.build\\r'
@@ -26,7 +34,7 @@ script:
   docker exec COQ /bin/bash --login -c "
     export PS4='+ \e[33;1m(\$0 @ line \$LINENO) \$\e[0m '
     set -ex
-    sudo chown -R coq:coq /home/coq/Mtac2
+    sudo chown -R opam:opam /home/coq/Mtac2
     ./configure.sh
     make
     make test
