--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ services:
   - docker
 
 env:
+  global:
+  - CPU_CORES="2"
   matrix:
   - COQ_IMAGE="ocaml/opam2:4.05"
 
@@ -28,6 +30,7 @@ install: |
   docker run -d -i --init --name=COQ -v ${TRAVIS_BUILD_DIR}:/home/coq/Mtac2 -w /home/coq/Mtac2 ${COQ_IMAGE}
   docker exec COQ /bin/bash --login -c "
     export PS4='+ \e[33;1m(\$0 @ line \$LINENO) \$\e[0m '
+    export OPAMJOBS=${CPU_CORES}
     set -ex
     opam config list
     opam repo list
