Fix `cache:` directive in .travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,9 @@ before_install:
   - if [[ -d $HOME/docker ]]; then ls $HOME/docker/*.tar.gz | xargs -I {file} sh -c "zcat {file} | docker load"; fi
 
 cache:
+  bundler: true
   directories:
-    ~/docker-images
+    - $HOME/docker
 
 install: |
   # Run the COQ container and display build metadata
