--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install: |
     opam config list
     opam repo list
     opam list
+    opam update -y
     opam install -y coq-unicoq.v1.3+8.9
     "
 script:
