--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install: |
     opam config list
     opam repo list
     opam list
-    opam install -y coq-unicoq
+    opam install -y coq-unicoq.1.3+8.8
     "
 script:
 - echo -e "${ANSI_YELLOW}Building Mtac2...${ANSI_RESET}" && echo -en 'travis_fold:start:Mtac2.build\\r'
