Force Coq#8.11 branch in CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install: |
     opam repo add coq-core-dev https://coq.inria.fr/opam/core-dev
     opam repo list
     sudo apt install -y m4
-    opam install -y coq.dev
+    opam pin add coq https://github.com/coq/coq.git#v8.11
     coqc --version
     opam pin --ignore-constraints-on=coq add coq-unicoq https://github.com/unicoq/unicoq.git#master
     opam pin
