Remove long-gone machine file from src/dune.

--- a/src/dune
+++ b/src/dune
@@ -3,7 +3,7 @@
  (public_name coq-mtac2.plugin)
  (flags :standard -rectypes -w -9-27-23 -warn-error -3)
  (modules_without_implementation metaCoqInstr)
- (modules :standard \ machine)
+ (modules :standard)
  (libraries coq.plugins.ltac unicoq.plugin))
 
 (rule
