Make `make test` test tests/bugs/*.v. Fixes #256.
Also repairs tests/bugs/bug117.v which hadn't been updated in a long while.

--- a/Makefile.local
+++ b/Makefile.local
@@ -4,7 +4,7 @@
 #COQC=coqc
 COQ_SRC_SUBDIRS+=user-contrib/Unicoq
 
-TESTS=$(wildcard tests/*.v)
+TESTS=$(wildcard tests/*.v tests/bugs/*.v)
 TESTRESULTS=$(TESTS:.v=.vo)
 
 EXAMPLES=$(wildcard examples/*.v)
