--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ install: |
     opam config list
     opam repo list
     opam list
+    opam update default
     opam repo add coq-released https://coq.inria.fr/opam/released
     opam repo add coq-core-dev https://coq.inria.fr/opam/core-dev
     opam repo list
