--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ install: |
     opam repo add coq-core-dev https://coq.inria.fr/opam/core-dev
     opam repo list
     sudo apt install -y m4 libgmp-dev
+    opam pin add zarith 1.10
     opam install -y coq.dev
     coqc --version
     opam pin add https://github.com/unicoq/unicoq.git#master -k git
