--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 env:
   matrix:
-  - COQ_IMAGE="ocaml/opam2:4.09"
+  - COQ_IMAGE="coqorg/base:4.09.1-flambda"
 
 # As described on https://bors.tech/documentation/getting-started/ we need a
 # `staging` and a `trying` branch, both of which need to be CI-enabled.
