--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ install: |
     opam pin add zarith 1.10
     opam install -y coq.dev
     coqc --version
-    opam pin add https://github.com/unicoq/unicoq.git#master -k git
+    opam pin add https://github.com/unicoq/unicoq.git#master -k git -y
     opam pin
     opam list
     "
