--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ branches:
     # This is where pull requests from "bors try" are built.
     - trying
     # Uncomment this to enable building pull requests.
-    # - master
+    - master
     # (Left commented out until we find that it would be useful to enable)
     # We want to have CI for all master branches that target specific coq versions.
     - /master-.*/
