--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install: |
     set -ex
     opam list
     coqc --version
-    opam pin add https://github.com/unicoq/unicoq.git#master-8.12 -k git
+    opam pin add https://github.com/unicoq/unicoq.git#master-8.12 -k git -y
     "
 script:
 - echo -e "${ANSI_YELLOW}Building Mtac2...${ANSI_RESET}" && echo -en 'travis_fold:start:Mtac2.build\\r'
