--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 env:
   matrix:
-  - COQ_IMAGE="coqorg/coq:dev"
+  - COQ_IMAGE="coqorg/coq:8.13-beta1"
 
 # As described on https://bors.tech/documentation/getting-started/ we need a
 # `staging` and a `trying` branch, both of which need to be CI-enabled.
