--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,22 +19,11 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    container: coqorg/coq:dev
+    container: ghcr.io/mtac2/mtac2-ci:master
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: Install Unicoq master
-      run: |
-        export OPAMJOBS="2"
-        set -ex
-        opam config list
-        opam repo list
-        opam list
-        opam update default
-        coqc --version
-        opam pin add https://github.com/unicoq/unicoq.git#master -k git -y
-        opam pin
-        opam list
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
