--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,23 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/mtac2/mtac2-ci:master      
-      options: --user ${{ needs.configure.outputs.uid_gid }}
-
+      image: coqorg/coq:dev    
+      
+    
     steps:
+    - name: unicoq
+      run: |
+        export OPAMJOBS="2"
+        set -ex
+        opam config list
+        opam repo list
+        opam list
+        opam update default
+        coqc --version
+        opam pin add https://github.com/unicoq/unicoq.git#master -k git -y
+        opam pin
+        opam list
+        
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: checkout
       uses: actions/checkout@v2
@@ -43,6 +56,7 @@ jobs:
         set -ex
         eval $(opam env)
         cd "$GITHUB_WORKSPACE"
+        sudo chown -R coq:coq .
         ./configure.sh
         make
         make test
