--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
     - name: unicoq
       run: |
         whoami
+        ls -al ~/.opam/
         export OPAMJOBS="2"
         set -ex
         opam config list
