--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,8 @@ jobs:
     - name: unicoq
       run: |
         whoami
-        ls -al ~/.opam/
+        env
+        ls -al /home/coq/
         export OPAMJOBS="2"
         set -ex
         opam config list
