--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
     - name: unicoq
       run: |
         set -ex
+        eval $(opam env)
         export OPAMJOBS="${{ steps.cpu-cores.outputs.count }}"
         opam config list
         opam repo list
@@ -47,6 +48,7 @@ jobs:
     - name: Build Mtac2
       run: |
         set -ex
+        eval $(opam env)
         export OPAMJOBS="${{ steps.cpu-cores.outputs.count }}"
         eval $(opam env)
         cd "$GITHUB_WORKSPACE"
