--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         set -ex
         eval $(opam env)
-        export OPAMJOBS="${{ steps.cpu-cores.outputs.count }}"
+        export OPAMJOBS=${{ steps.cpu-cores.outputs.count }}
         opam config list
         opam repo list
         opam list
@@ -53,7 +53,7 @@ jobs:
       run: |
         set -ex
         eval $(opam env)
-        export OPAMJOBS="${{ steps.cpu-cores.outputs.count }}"
+        export OPAMJOBS=${{ steps.cpu-cores.outputs.count }}
         cd "$GITHUB_WORKSPACE"
         eval $(opam env)
         ./configure.sh
