Use coq community action.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,43 +16,35 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
+    name: build
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    container:
-      image: coqorg/coq:dev
-      env:
-        OPAMROOT: "/home/coq/.opam"
-        
-    steps:
-    - name: cpu-cores
-      uses: SimenB/github-actions-cpu-cores@v1
+    strategy:
+      matrix:
+        # Browse URL: https://github.com/coq-community/docker-coq/wiki#supported-tags
+        # to get the list of supported (coq, ocaml) versions in coqorg/coq.
+        coq_version:
+        #  - '8.15'
+          - 'dev'
+        ocaml_version:
+          - '4.12.1-flambda'
+      # at most 20 concurrent jobs per free account:
+      # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#usage-limits
+      max-parallel: 4
+      # don't cancel all in-progress jobs if one matrix job fails:
+      fail-fast: false
 
-      
-    - name: unicoq
-      run: |
-        set -ex
-        eval $(opam env)
-        export OPAMJOBS=2
-        opam config list
-        opam repo list
-        opam list
-        opam update default
-        coqc --version
-        opam pin add https://github.com/unicoq/unicoq.git#master -k git -y
-        opam pin
-        opam list
-        
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - name: checkout
-      uses: actions/checkout@v3
-      
-    - name: Build Mtac2
-      run: |
-        set -ex
-        eval $(opam env)
-        export OPAMJOBS=2
-        cd "$GITHUB_WORKSPACE"
-        eval $(opam env)
-        ./configure.sh
-        make
-        make test
+    # Steps represent a sequence of tasks that will be executed as part of the job.
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it.
+      - uses: actions/checkout@v2
+      - uses: coq-community/docker-coq-action@v1
+        # See https://github.com/coq-community/docker-coq-action#readme
+        # for details on docker-coq-action's syntax and provided features.
+        with:
+          opam_file: 'opam'
+          coq_version: ${{ matrix.coq_version }}
+          ocaml_version: ${{ matrix.ocaml_version }}
+          export: 'OPAMWITHTEST'
+        env:
+          OPAMWITHTEST: 'true'
