--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,3 +48,21 @@ jobs:
           export: 'OPAMWITHTEST'
         env:
           OPAMWITHTEST: 'true'
+
+  # COPIED FROM
+  # https://github.com/rust-lang/crater/blob/9ab6f9697c901c4a44025cf0a39b73ad5b37d198/.github/workflows/bors.yml#L125-L149
+  # These jobs doesn't actually test anything, but they're only used to tell
+  # bors the build completed, as there is no practical way to detect when a
+  # workflow is successful listening to webhooks only.
+  #
+  # ALL THE PREVIOUS JOBS NEEDS TO BE ADDED TO THE `needs` SECTION OF THIS JOB!
+
+  end-success:
+    name: bors build finished
+    if: success()
+    runs-on: ubuntu-latest
+    needs: [build]
+
+    steps:
+      - name: Mark the job as successful
+        run: exit 0
