--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
               opam pin add -n -y -k path $PACKAGE $WORKDIR
               opam pin add -n -y -k git coq-unicoq https://github.com/unicoq/unicoq#master-8.17
               opam update -y
+              opam install --confirm-level=unsafe-yes -j 2 coq-unicoq
               opam install --confirm-level=unsafe-yes -j 2 $PACKAGE --deps-only
             endGroup
         env:
