--- a/src/dune
+++ b/src/dune
@@ -4,7 +4,7 @@
  (flags :standard -rectypes -w -9-27-23 -warn-error -3)
  (modules_without_implementation metaCoqInstr)
  (modules :standard)
- (libraries coq.plugins.ltac unicoq.plugin))
+ (libraries rocq-runtime.plugins.ltac unicoq.plugin))
 
 (rule
  (targets metaCoqInit.ml)
